--- a/frames/settings.html
+++ b/frames/settings.html
@@ -375,11 +375,11 @@
                         defaultsubtitle.attr('selected', 'selected');
                         $('#streamingPort').attr("placeholder", random);
                         $('#streamingPort').val('');
-                        $('#ytsEndpoint').attr("placeholder", 'https://yts.re/api/');
+                        $('#ytsEndpoint').attr("placeholder", 'https://yts.to/api/v2/');
                         $('#ytsEndpoint').val('');
                         $('#eztvEndpoint').attr("placeholder", 'http://eztvapi.re/');
                         $('#eztvEndpoint').val('');
-                        $('#kickassEndpoint').attr("placeholder", 'https://kickass.so');
+                        $('#kickassEndpoint').attr("placeholder", 'https://kickass.to');
                         $('#kickassEndpoint').val('');
                         $('#connectionLimit').attr("placeholder", '100');
                         $('#connectionLimit').val('');
